# Photo-Focus-Stacker

./: .gitignore  LICENSE  README.md  main.py  photostacker  pyproject.toml  requirements.txt
src/: cli.py  focus_stacker.py  main.py
src/config/: __init__.py  output_settings.py  settings_store.py  stack_detection_settings.py  stacking_settings.py
src/core/: __init__.py  alignment.py  blending.py  focus_measure.py  focus_stacker.py  postprocessing.py  utils.py
src/services/: __init__.py  auto_tune.py  stack_detection.py
src/ui/: __init__.py  main_window.py  stacking_worker.py
